<resources>
    <string name="app_name" translatable="false">MotoCalc</string>
    <string name="app_version" translatable="false">2.0.3</string>
    <string name="app_author">App author:</string>
    <string name="about_app_desc">MotoCalc allows you quickly and easily compute costs of group riding. Averaged prices of fuels are downloading from www.e-petrol.pl</string>
    <string name="about_app_bug_report">\nDid you found bug? Do you have your own suggestion? I will see what I can do about that. :) Contact me via my homepage.\n</string>
    <string name="about_app_copyright">The originator of the \"Po ile na łebka?\" app:\n© Dawid Furdzik</string>

    <string name="gpsmessage_notification_text">Route length: %1$s km</string>

    <string name="petrol_prices" translatable="false">Pb 95: %1$s zł/l\nPb 98: %2$s zł/l\nON: %3$s zł/l\nLPG: %4$s zł/l</string>
    <string name="problem_internet">Problem!</string>
    <string name="gps_off_title">GPS is off</string>
    <string name="gps_off_text">To use from automated calcuation of route length, please turn on GPS in Settings.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="show_petrol_prices">Show fuel prices</string>
    <string name="about_app">About application</string>
    <string name="route_length">Route length (km):</string>
    <string name="combustion">Combustion (l/100 km):</string>
    <string name="number_of_people">Number of people:</string>
    <string name="prices_from_internet">Fuel prices\nfrom internet</string>
    <string name="loading">Loading…</string>
    <string name="type_of_fuel">Type of fuel:</string>
    <string name="pln_per_person">PLN PP</string>
    <string name="price_of_fuel">Fuel price (zł/l):</string>
    <string name="additional_costs">Additional costs:</string>
</resources>
